--- a/src/texsourc/makefile.txt
+++ b/src/texsourc/makefile.txt
@@ -1,4 +1,5 @@
 Copyright 2007 TeX Users Group.
+Copyright 2014 Clerk Ma.
 You may freely use, modify and/or distribute this file.
 
   makefile         9945   1-09-95   8:20a current selected 
