--- a/src/utils/makefile
+++ b/src/utils/makefile
@@ -12,7 +12,9 @@ CFLAGS=/nologo /c /MD /Gy /O2 /W4
 LFLAGS=/nologo
 RFLAGS=/nologo
 
+utils: dvidump.exe checktfm.exe
 
+# For dvidump.
 dvidump.exe: dvidump.obj dvidump.res
 	$(LINK) $(LFLAGS) dvidump.obj dvidump.res
 
@@ -21,3 +23,14 @@ dvidump.obj: dvidump.c
 
 dvidump.res: dvidump.rc
 	$(RC) $(RFLAGS) dvidump.rc
+
+# For checktfm.
+checktfm.exe: checktfm.obj checktfm.res
+	$(LINK) $(LFLAGS) checktfm.obj checktfm.res
+
+checktfm.obj: checktfm.c
+	$(CC) $(CFLAGS) checktfm.c
+
+checktfm.res: checktfm.rc
+	$(RC) $(RFLAGS) checktfm.rc
+
