--- a/src/texsourc/Makefile.gcc
+++ b/src/texsourc/Makefile.gcc
@@ -12,14 +12,14 @@
 #
 
 CC = gcc
-CFLAGS = -DMSDOS -DTeX -DINITEX -DINI -Ilibmd5 -Ilibavl/libavl
+CFLAGS = -DMSDOS -DTeX -DINITEX -DINI -Ilibmd5
 LDFLAGS = -lkpathsea -lhpdf -lpng -lz
 
 objects = yandytex.o itex.o openinou.o subroute.o local.o \
 	tex0.o tex1.o tex2.o tex3.o tex4.o \
 	tex5.o tex6.o tex7.o tex8.o tex9.o \
 	yandy_pool.o md5.o md5file.o \
-	yandy_pdf_backend.o avl.o
+	yandy_pdf_backend.o
 
 headers = yandytex.h texd.h coerce.h texmf.h texmfmem.h
 
@@ -82,9 +82,6 @@ md5file.o: md5file.c $(headers)
 
 yandy_pdf_backend.o: yandy_pdf_backend.c $(headers)
 	$(CC) -c $(CFLAGS) yandy_pdf_backend.c
-
-avl.o: libavl/libavl/avl.c $(headers)
-	$(CC) -c $(CFLAGS) libavl/libavl/avl.c
 
 .PHONY: clean
 
