--- a/src/texsourc/makefile
+++ b/src/texsourc/makefile
@@ -25,7 +25,7 @@ RC = rc
 # Release version
 # CFLAGS=/c /Ge /Gy /Gf /Ox /W4 /DMSDOS /DTeX /DPHARLAP /DNDEBUG /Ilib /YX
 CFLAGS=/nologo /c /MT /GF /Gy /Ox /W4 /DMSDOS /DTeX /DPHARLAP /DNDEBUG \
-	/I"kpathsea" /I"libharu/include" /I"libharu/win32/include" /I"libavl/libavl"
+	/I"kpathsea" /I"libharu/include" /I"libharu/win32/include"
 # Debugging version
 # CFLAGS=/c /Ge /Gy /Gf /Od /Zi /W4 /DMSDOS /DTeX /DPHARLAP /Ilib /YX
 
@@ -45,7 +45,7 @@ objs = yandytex.obj itex.obj openinou.obj subroute.obj local.obj \
 	tex0.obj tex1.obj tex2.obj tex3.obj tex4.obj \
 	tex5.obj tex6.obj tex7.obj tex8.obj tex9.obj \
 	yandy_pool.obj yandytex.res md5.obj md5file.obj \
-	yandy_pdf_backend.obj avl.obj
+	yandy_pdf_backend.obj
 
 # ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ###
 
@@ -53,14 +53,10 @@ yandytex.exe: $(objs)
 	$(LINK) $(LFLAGS) yandytex itex openinou subroute local \
 	tex0 tex1 tex2 tex3 tex4 tex5 tex6 tex7 tex8 tex9 \
 	yandy_pool yandytex.res md5 md5file yandy_pdf_backend \
-	avl \
 	kpathsea\kpathsea.lib libharu\libhpdf.lib libpng\libpng.lib zlib\zlib.lib
 	del ..\yandy\bin\yandytex.exe
 	copy yandytex.exe ..\yandy\bin\yandytex.exe
 # ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ###
-avl.obj: libavl/libavl/avl.c
-	$(CC) $(CFLAGS) libavl/libavl/avl.c
-
 yandy_pdf_backend.obj: yandy_pdf_backend.c
 	$(CC) $(CFLAGS) yandy_pdf_backend.c
 
