--- a/src/texsourc/makefile
+++ b/src/texsourc/makefile
@@ -18,8 +18,7 @@ RC = rc
 # Release version
 # CFLAGS=/c /Ge /Gy /Gf /Ox /W4 /DMSDOS /DTeX /DPHARLAP /DNDEBUG /Ilib /YX
 CFLAGS=/nologo /c /MT /GF /Gy /Ox /W4 /DMSDOS /DTeX /DPHARLAP /DNDEBUG \
-	/I"kpathsea" /I"libharu/include" /I"libharu/win32/include" /I"zlib" \
-	/I"libmd5"
+	/I"kpathsea" /I"zlib" /I"libmd5"
 # Debugging version
 # CFLAGS=/c /Ge /Gy /Gf /Od /Zi /W4 /DMSDOS /DTeX /DPHARLAP /Ilib /YX
 
@@ -38,26 +37,24 @@ LFLAGS=/NOLOGO /MAP
 objs = yandytex.obj itex.obj openinou.obj subroute.obj local.obj \
 	tex0.obj tex1.obj tex2.obj tex3.obj tex4.obj \
 	tex5.obj tex6.obj tex7.obj tex8.obj tex9.obj \
-	yandy_pool.obj yandytex.res md5.obj yandy_backend_pdf.obj
+	yandy_pool.obj yandytex.res md5.obj
 
 # ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ###
 
 yandytex.exe: $(objs)
 	$(LINK) $(LFLAGS) yandytex itex openinou subroute local \
 	tex0 tex1 tex2 tex3 tex4 tex5 tex6 tex7 tex8 tex9 \
-	yandy_pool yandytex.res md5 yandy_backend_pdf \
-	kpathsea\kpathsea.lib libharu\libhpdf.lib libpng\libpng.lib zlib\zlib.lib
+	yandy_pool yandytex.res md5 \
+	kpathsea\kpathsea.lib libpng\libpng.lib zlib\zlib.lib \
+	dvipdfmx\libdvipdfmx.lib
 	del ..\yandy\bin\yandytex.exe
 	copy yandytex.exe ..\yandy\bin\yandytex.exe
 # ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ###
-yandy_backend_pdf.obj: yandy_backend_pdf.c
-	$(CC) $(CFLAGS) yandy_backend_pdf.c
-
 md5.obj: libmd5\md5.c
 	$(CC) -Ilibmd5 $(CFLAGS) libmd5\md5.c
 
 yandytex.res: yandytex.rc
-	rc yandytex.rc
+	rc /nologo yandytex.rc
 
 yandytex.obj: yandytex.c \
 	texd.h texmf.h texmfmem.h coerce.h yandy_macros.h
@@ -78,8 +75,6 @@ subroute.obj: subroute.c \
 local.obj: local.c \
 	texd.h texmf.h texmfmem.h coerce.h yandy_macros.h
 	$(CC) /DINITEX $(CFLAGS) local.c
-
-# NOTE: cannot compile tex5.c and tex6.c with full optimizations ...
 
 tex0.obj: tex0.c \
 	texd.h texmf.h texmfmem.h coerce.h yandy_macros.h
