--- a/src/texsourc/Makefile.linux.gcc
+++ b/src/texsourc/Makefile.linux.gcc
@@ -3,7 +3,7 @@
 #
 # You may freely use, modify and/or distribute this file.
 #
-# makefle for linux (tested in ubuntu 14.04: gcc/clang).
+# makefle for linux (tested in ubuntu 14.04: gcc 4.8).
 #
 # apt-get install libkpathsea6 libkpathsea-dev
 # apt-get install zlib1g zlib1g-dev
