--- a/src/texsourc/Makefile.linux.android.static
+++ b/src/texsourc/Makefile.linux.android.static
@@ -3,15 +3,14 @@
 #
 # You may freely use, modify and/or distribute this file.
 #
-# makefile for linux (tested in ubuntu 14.04: clang/LLVM 4.3).
-#
-# apt-get install libkpathsea6 libkpathsea-dev
-# apt-get install zlib1g zlib1g-dev
+# makefile for linux (tested in ubuntu 14.04: gcc 4.8).
+# linked libkpathsea.a and libz.a
+# ./configure --prefix=/home/clerk/dev --host=arm-linux-androideabi
 #
 
-CC = clang
-CFLAGS = -c -O2 -Ilibmd5
-LDFLAGS = -lkpathsea -lz
+CC = arm-linux-androideabi-gcc
+CFLAGS = -c -O2 -Wno-unused-result -Ilibmd5 -I/home/clerk/android/include
+LDFLAGS = /home/clerk/android/lib/libkpathsea.a -lz
 
 objects = yandytex.o itex.o openinou.o subroute.o local.o \
 	tex0.o tex1.o tex2.o tex3.o tex4.o \
