--- a/src/texsourc/Makefile.linux.gcc.static
+++ b/src/texsourc/Makefile.linux.gcc.static
@@ -8,22 +8,25 @@
 #
 
 CC = gcc
-CFLAGS = -c -O2 -Wno-unused-result -Ilibmd5
-LDFLAGS = /home/clerk/dev/android/lib/libkpathsea.a /home/clerk/dev/android/lib/libz.a
+CFLAGS = -g -c -O2 -Wno-unused-result -Ilibmd5
+LDFLAGS = /home/clerk/dev/android/lib/libkpathsea.a libdpx.a libpng.a libpaper.a /home/clerk/dev/android/lib/libz.a /home/clerk/dev/android/lib/libkpathsea.a -lm
 
 objects = yandytex.o itex.o openinou.o subroute.o local.o \
 	tex0.o tex1.o tex2.o tex3.o tex4.o \
 	tex5.o tex6.o tex7.o tex8.o tex9.o \
-	pool.o md5.o utils.o
+	pool.o md5.o utils.o dpx.o
 
 headers = yandytex.h texd.h coerce.h macros.h memory.h
 
 yandytex: $(objects)
-	$(CC) -s -o yandytex $(objects) $(LDFLAGS)
+	$(CC) -o yandytex $(objects) $(LDFLAGS)
 
 yandytex.o: yandytex.c $(headers)
 	$(CC) $(CFLAGS) yandytex.c
- 
+
+dpx.o: dpx.c $(headers)
+	$(CC) $(CFLAGS) dpx.c
+
 itex.o: itex.c $(headers)
 	$(CC) $(CFLAGS) itex.c
 
