--- a/src/texsourc/Makefile.linux.gcc
+++ b/src/texsourc/Makefile.linux.gcc
@@ -10,13 +10,13 @@
 #
 
 CC = gcc
-CFLAGS = -c -O2 -Wno-unused-result -Ilibmd5
+CFLAGS = -c -O2 -Wno-unused-result
 LDFLAGS = -lkpathsea -lz
 
 objects = yandytex.o itex.o openinou.o subroute.o local.o \
 	tex0.o tex1.o tex2.o tex3.o tex4.o \
 	tex5.o tex6.o tex7.o tex8.o tex9.o \
-	pool.o md5.o utils.o
+	pool.o utils.o
 
 headers = yandytex.h texd.h coerce.h macros.h memory.h
 
@@ -70,9 +70,6 @@ tex9.o: tex9.c $(headers)
 
 pool.o: pool.c $(headers)
 	$(CC) $(CFLAGS) pool.c
-
-md5.o: libmd5/md5.c $(headers)
-	$(CC) $(CFLAGS) libmd5/md5.c
 
 utils.o: utils.c $(headers)
 	$(CC) $(CFLAGS) utils.c
