--- a/src/texsourc/Makefile.win.clang
+++ b/src/texsourc/Makefile.win.clang
@@ -10,7 +10,7 @@ LINK = link
 RC = rc
 
 CFLAGS=/nologo /c /MT /GF /Ox /W4 \
-	/I"kpathsea" /I"zlib" /I"libmd5" /D_CRT_SECURE_NO_WARNINGS \
+	/I"kpathsea" /I"zlib" /D_CRT_SECURE_NO_WARNINGS \
 	-Wno-char-subscripts -Wno-dangling-else \
 	-Wno-deprecated-declarations
 
@@ -19,7 +19,7 @@ LFLAGS=/NOLOGO /MAP
 objs = yandytex.obj itex.obj openinou.obj subroute.obj local.obj \
 	tex0.obj tex1.obj tex2.obj tex3.obj tex4.obj \
 	tex5.obj tex6.obj tex7.obj tex8.obj tex9.obj \
-	pool.obj yandytex.res md5.obj utils.obj
+	pool.obj yandytex.res utils.obj
 
 yandytex.exe: $(objs)
 	$(LINK) $(LFLAGS) yandytex itex openinou subroute local \
@@ -28,9 +28,6 @@ yandytex.exe: $(objs)
 	kpathsea\kpathsea.lib zlib\zlib.lib
 	del ..\yandy\bin\yandytex.exe
 	copy yandytex.exe ..\yandy\bin\yandytex.exe
-
-md5.obj: libmd5\md5.c
-	$(CC) -Ilibmd5 $(CFLAGS) libmd5\md5.c
 
 yandytex.res: yandytex.rc
 	$(RC) /nologo yandytex.rc
