--- a/src/texsourc/Makefile.win.msvc
+++ b/src/texsourc/Makefile.win.msvc
@@ -17,18 +17,22 @@ LFLAGS=/NOLOGO /MAP
 objs = yandytex.obj itex.obj openinou.obj subroute.obj local.obj \
 	tex0.obj tex1.obj tex2.obj tex3.obj tex4.obj \
 	tex5.obj tex6.obj tex7.obj tex8.obj tex9.obj \
-	pool.obj yandytex.res utils.obj
+	pool.obj yandytex.res utils.obj dpx.obj
 
 yandytex.exe: $(objs)
 	$(LINK) $(LFLAGS) yandytex itex openinou subroute local \
 	tex0 tex1 tex2 tex3 tex4 tex5 tex6 tex7 tex8 tex9 \
-	pool yandytex.res utils \
-	kpathsea\kpathsea.lib zlib\zlib.lib
+	pool yandytex.res utils dpx\
+	kpathsea\kpathsea.lib dvipdfmx\libdpx.lib libpng\libpng.lib zlib\zlib.lib
 	del ..\yandy\bin\yandytex.exe
 	copy yandytex.exe ..\yandy\bin\yandytex.exe
 
 yandytex.res: yandytex.rc
 	$(RC) /nologo yandytex.rc
+
+dpx.obj: dpx.c \
+	texd.h yandytex.h dpx.h memory.h coerce.h macros.h
+	$(CC) $(CFLAGS) dpx.c
 
 yandytex.obj: yandytex.c \
 	texd.h yandytex.h memory.h coerce.h macros.h
